# finbot

./: README.md  docker-compose.yaml  mongo-init.js  nginx.conf
backend/: .env  .env.example  .gitignore  Dockerfile  alembic.ini  install_chromedriver.sh  pyproject.toml  run.sh  scrape_deposits.py  scrape_faqs.py  scrape_loans.py
backend/agents/: kb0.py  schemas.py
backend/alembic/versions/: c359c0561312_init.py  d3fa00d2937a_init.py  e2c092a8a75a_description_column_추가.py
backend/app/: authorization.py  chat.db  crud.py  db.py  dependencies.py  kakao.py  main.py
backend/app/api/: chat.py
backend/app/api/v1/: router.py
backend/app/core/: config.py  container.py  deps.py
backend/app/core/config/: __init__.py  chroma.py  config.py  mongo.py
backend/app/schemas/: chat.py  product.py  user.py
backend/common/: asyncio.py  database.py  http.py
backend/common/decorators/: asyncio.py
backend/common/mixins/: http.py
backend/common/utils/: preprocess.py
backend/crawler/: base.py  deposit.py  faq.py  loan.py
backend/data/: savings.jsonl  savings.jsonl.bak  savings_parsed.jsonl  savings_parsed.jsonl.bak
backend/db/: common.py
backend/db/models/: __init__.py  deposit.py  faq.py  loan.py
backend/db/repositories/: __init__.py  base.py  deposit.py  faq.py  loan.py
backend/domains/auth/: config.py  repositories.py  services.py  usecases.py
backend/domains/card/: models.py  schemas.py
backend/domains/card/agents/: agent_factory.py  tool_factory.py
backend/domains/card/repositories/: mutations.py  retrieval.py
backend/domains/chat/: models.py  repositories.py  services.py
backend/domains/common/: parsers.py  scrapers.py  types.py  utils.py
backend/domains/common/agents/: graph_state.py  planning_node.py  research_node.py  self_consistency.py  states.py  supervisor.py  types.py
backend/domains/feed/scrapers/: raw_article_scraper.py
backend/domains/saving/: models.py  schemas.py  types.py
backend/domains/saving/agents/: agent_factory.py  test.py  (+15 more)
backend/domains/user/: auth.py  config.py  models.py  repositories.py  services.py  user_repo.py
backend/eval/common/: memories.json  queries.json
backend/eval/savings/: sample_savings.py
backend/preprocess/: html.py
backend/schemas/: chat.py  embed.py
backend/services/: assistant.py  search.py
backend/utils/: embed.py
(+64 files in other folders)
